# crewai_agentic_rag_chatbot

./: .gitignore  README.md  app.py  chat.py  chatbot.py  flow.py  ingest.py  pyproject.toml
evaluation/: eval_dataset.json  eval_retieval.py
knowledge/: user_preference.txt
src/crewai_nutrition_assist/: crew.py  main.py
src/crewai_nutrition_assist/config/: agents.yaml  tasks.yaml
