[project]
name = "crewai_nutrition_assist"
version = "0.1.0"
description = "crewai_nutrition_assist using crewAI"
authors = [{ name = "Maryam Waqar", email = "mariamwaqarawan@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.2",
    "google-genai",
    "openai",               
    "pypdf",                  # PDF parsing for ingest.py
    "python-dotenv",
    "qdrant-client",
    "sentence-transformers",
    "pdfplumber",
    "python-docx",
    "beautifulsoup4",
    "requests",
]

[project.scripts]
ingest = "crewai_nutrition_assist.ingest:main"
chat = "crewai_nutrition_assist.chat:main"

[tool.crewai]
type = "crew"


